# comic-drama-platform

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: .env.example  .gitignore  README.md  find_project.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_projects_and_jobs.py  0002_business_tables_and_jobs_fk.py  0003_character_scene_meta_indexes.py  125f8a6404de_add_lock_scene_asset_job_kind.py  1b4e5fd2c7a9_add_extract_characters_job_kind.py  20260428_add_character_turnaround_and_voice.py  20260429_add_character_visual_type_and_roles.py  6a7f1fd2c0aa_add_shot_drafts_and_job_kind.py  6f9f0c2d0d6b_add_project_prompt_profiles.py  88f4e19a3f2d_add_prompt_profile_job_kinds.py  9127e4141b71_add_parent_id_and_new_job_kinds.py  9c0f12ab34cd_add_project_reference_assets.py  d4f5a6b7c8d9_add_storyboard_source_and_beats.py  e3d40b72d466_add_register_character_asset_job_kind.py  e5f6a7b8c9d0_add_style_reference_assets.py  f8c1f7b6d3aa_add_shot_video_renders.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: characters.py  envelope.py  errors.py  health.py  jobs.py  projects.py  prompt_profiles.py  scenes.py  shots.py  storyboards.py  style_references.py
backend/app/infra/: __init__.py  apimart_image_client.py  asset_store.py  db.py  obs_store.py  redis_client.py  ulid.py  volcano_asset_client.py  volcano_client.py  volcano_errors.py
backend/app/pipeline/: __init__.py  states.py  storyboard_states.py  transitions.py
backend/app/tasks/: async_runner.py  celery_app.py
backend/app/utils/: json_utils.py  logger.py
backend/scripts/: derive_project_genre.py  smoke_m1.sh  smoke_m2.sh  smoke_m3a.sh  smoke_m3b.sh
backend/tests/: conftest.py  helpers.py
backend/tests/integration/: test_alembic_migration.py  test_character_concurrency.py  test_character_dual_image_generation.py  test_character_generate_async_api.py  test_character_register_asset_stage_gate.py  test_job_cancel_api.py  test_m3a_contract.py  test_parse_flow.py  test_projects_api.py  test_prompt_profile_api.py  test_reference_candidates_dual_character_scene.py  test_render_shot_flow.py  test_render_shot_video_flow.py  test_rollback_api.py  test_scene_no_person_generation.py  test_shot_draft_task.py  test_shot_reference_api.py  test_shot_render_api.py  test_shot_video_api.py  test_storyboards_api.py  test_style_reference_aggregate.py  test_style_reference_api.py  test_style_reference_tasks.py  test_video_audio_api.py  test_volcano_real_client.py  test_volcano_video_client.py
backend/tests/unit/: test_apimart_image_client.py  test_ulid.py  (+24 more)
(+219 files in other folders)
